# institutional-futures-trader

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: codex_task.yml
.github/prompts/: ai-review-gate.md
.github/workflows/: ai-review-gate.yml  auto-merge.yml  ci.yml  discord-1a-notification.yml  post-merge-lesson-capture.yml
configs/: README.md
docs/: AI_OPERATOR_LOOP.md  AI_REVIEW_GATE.md  AI_REVIEW_GATE_COVERAGE_PLAN.md  ARCHITECTURE.md  AUTOMATION_STATUS.md  AUTO_MERGE_POLICY.md  BACKTEST_REPLAY_PLAN.md  CODEX_REVIEW_SHADOW_PLAN.md  DEVELOPMENT_ROADMAP.md  DISCORD_1A_NOTIFICATION_ONLY_PLAN.md  DISCORD_1A_OWNER_DECISIONS.md  DISCORD_1B_SOURCE_OF_TRUTH_SUMMARIZER.md  DISCORD_OPERATOR_BRIDGE.md  DOMAIN_EVENTS.md  DOMAIN_MODEL.md  EXCHANGE_ADAPTER_SPEC.md  LIVE_TRADING_GATE.md  ORDER_LIFECYCLE.md  POST_MERGE_LESSON_CAPTURE.md  PR_REVIEW_PLAYBOOK.md  REQUIREMENTS.md  RISK_ENGINE_INTERFACE.md  RISK_POLICY.md
docs/solutions/: pr-review-loop-lessons.md
docs/solutions/architecture-patterns/: oms-state-machine-domain-invariant-alignment-2026-05-23.md
docs/solutions/security-issues/: ai-review-gate-model-routing-2026-05-20.md  ai-review-gate-secret-boundary-2026-05-18.md  conditional-auto-merge-trust-boundary-2026-05-19.md
docs/solutions/workflow-issues/: auto-merge-closed-pr-disable-events-2026-05-22.md  (+4 more)
src/trading_system/: __init__.py
tests/: test_project_structure.py  test_public_repo_safety.py  test_pyproject_metadata.py
(+20 files in other folders)
